--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Rock paper scissors</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="C:\Users\Admin\Downloads\rock.png" >
+            <img src="./images/rock.png" alt="Rock">
         </div>
         <div class="choice" id="paper">
-            <img src="C:\Users\Admin\Downloads\paper.png" >
+            <img src="./images/paper.png" alt="Paper">
         </div>
         <div class="choice" id="scissors">
-            <img src="C:\Users\Admin\Downloads\scissors.png">
+            <img src="./images/scissors.png" alt="Scissors">
         </div>
         </div> 
 
